party deal starting out..Navbar

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -8,3 +8,13 @@
     list-style: none;
     gap: 50px;
 }
+.rsvp {
+    padding: 15px 20px;
+    background: red;
+    border-radius: 10px;
+    color: #fff;
+}
+.rsvp > a {
+    color: #fff;
+    text-decoration: none;
+}
