--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Old Standard TT', serif;
-    margin: 0 50px;
+    /* margin: 0 50px; */
 }
 
